[#356] cleanup